let links in side navs wrap by default (add `nowrap` class to prevent)

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -6997,8 +6997,6 @@ main > article:last-child {
           display: inline-block;
           vertical-align: middle;
           overflow: hidden;
-          text-overflow: ellipsis;
-          white-space: nowrap;
           width: 100%; }
           .content-container .content-aside nav ul li a:hover {
             text-decoration: underline; }
@@ -7015,6 +7013,12 @@ main > article:last-child {
           line-height: 0.9rem;
           margin-bottom: 3.2px;
           margin-bottom: 0.2rem; }
+    .content-container .content-aside nav.nowrap li a,
+    .content-container .content-aside nav.nowrap ul li a,
+    .content-container .content-aside nav ul.nowrap li a,
+    .content-container .content-aside nav ul.nowrap ul li a {
+      text-overflow: ellipsis;
+      white-space: nowrap; }
   @media (min-width: 544px) {
     .content-container .content-main,
     .content-container .content-aside,
