--- a/scss/components/typography.scss
+++ b/scss/components/typography.scss
@@ -37,8 +37,6 @@
             display:        inline-block;
             vertical-align: middle;
             overflow:       hidden;
-            text-overflow:  ellipsis;
-            white-space:    nowrap;
             width:          100%;
 
             &:hover {
